# mungmung-gpt

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py  prompts.py
backend/app/api/: translate.py
backend/app/core/: generator.py  image_processor.py  retriever.py
backend/app/data/knowledge/: body_language.json
backend/app/models/: schemas.py
backend/scripts/: seed_knowledge.py
docs/: PRJ04_W2_001_Image_Processing(PIL)[Lecture].ipynb  PRJ04_W2_003_Multimodal_LangChain_ChatModel[Lecture].ipynb  PRJ04_W2_004_Multimodal_RAG_Financial_Part1[Lecture].ipynb  PRJ04_W2_005_Multimodal_RAG_Financial_Part2[Lecture].ipynb
docs/notebooks/: PRJ04_W2_002_Multimodal_LangChain_CLIP[Lecture].ipynb  PRJ04_W2_006_Multimodal_RAG_Financial_Part3[Lecture].ipynb
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/result/: KnowledgePanel.tsx  TranslationBubble.tsx
frontend/components/upload/: ImageDropzone.tsx  PersonaSelector.tsx
frontend/lib/: api.ts  types.ts
