[project]
name = "mungmung-gpt-backend"
version = "0.1.0"
description = "강아지 표정 통역기 — 사진 업로드 + 페르소나 기반 내면 독백 생성"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "langchain>=1.2.15",
    "langchain-core>=1.3.0",
    "langchain-openai>=1.1.16",
    "pillow>=12.2.0",
    "pydantic>=2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "uvicorn[standard]>=0.45.0",
]
